--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,64 @@
-aiofiles==0.8.0 ; python_version >= "3.8" and python_version < "3.11"
-aiohttp==3.8.1 ; python_version >= "3.8" and python_version < "3.11"
-aiosignal==1.2.0 ; python_version >= "3.8" and python_version < "3.11"
-aiosqlite==0.17.0 ; python_version >= "3.8" and python_version < "3.11"
-alembic==1.7.7 ; python_version >= "3.8" and python_version < "3.11"
-async-timeout==4.0.2 ; python_version >= "3.8" and python_version < "3.11"
-asyncmy==0.2.7 ; python_version >= "3.8" and python_version < "3.11"
-attrs==21.4.0 ; python_version >= "3.8" and python_version < "3.11"
-blinker==1.4 ; python_version >= "3.8" and python_version < "3.11"
-cffi==1.15.1 ; python_version >= "3.8" and python_version < "3.11"
-charset-normalizer==2.1.0 ; python_version >= "3.8" and python_version < "3.11"
-click==8.1.3 ; python_version >= "3.8" and python_version < "3.11"
-colorama==0.4.5 ; python_version >= "3.8" and python_version < "3.11" and platform_system == "Windows"
-cryptography==3.4.8 ; python_version >= "3.8" and python_version < "3.11"
-et-xmlfile==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
-fire==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
-frozenlist==1.3.0 ; python_version >= "3.8" and python_version < "3.11"
-greenlet==1.1.2 ; python_version >= "3.8" and python_version < "3.11"
-h11==0.13.0 ; python_version >= "3.8" and python_version < "3.11"
-h2==4.1.0 ; python_version >= "3.8" and python_version < "3.11"
-h5py==3.7.0 ; python_version >= "3.8" and python_version < "3.11"
-hpack==4.0.0 ; python_version >= "3.8" and python_version < "3.11"
-hypercorn==0.13.2 ; python_version >= "3.8" and python_version < "3.11"
-hyperframe==6.0.1 ; python_version >= "3.8" and python_version < "3.11"
-idna==3.3 ; python_version >= "3.8" and python_version < "3.11"
-importlib-metadata==6.1.0 ; python_version >= "3.8" and python_version < "3.9"
-importlib-resources==5.8.0 ; python_version >= "3.8" and python_version < "3.9"
-itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "3.11"
-jinja2==3.1.2 ; python_version >= "3.8" and python_version < "3.11"
-lark==1.1.2 ; python_version >= "3.8" and python_version < "3.11"
-mako==1.2.1 ; python_version >= "3.8" and python_version < "3.11"
-markupsafe==2.1.1 ; python_version >= "3.8" and python_version < "3.11"
-multidict==6.0.2 ; python_version >= "3.8" and python_version < "3.11"
-mypy-extensions==0.4.3 ; python_version >= "3.8" and python_version < "3.11"
-numpy==1.21.4 ; python_version >= "3.8" and python_version < "3.11"
-openpyxl==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
-packaging==21.3 ; python_version >= "3.8" and python_version < "3.11"
-pillow==9.1.0 ; python_version >= "3.8" and python_version < "3.11"
-pint==0.16.1 ; python_version >= "3.8" and python_version < "3.11"
-priority==2.0.0 ; python_version >= "3.8" and python_version < "3.11"
-py==1.11.0 ; python_version >= "3.8" and python_version < "3.11" and implementation_name == "pypy"
-pycparser==2.21 ; python_version >= "3.8" and python_version < "3.11"
-pydantic==1.10.7 ; python_version >= "3.8" and python_version < "3.11"
-pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
-python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.11"
-python-magic==0.4.24 ; python_version >= "3.8" and python_version < "3.11"
-pytz==2021.3 ; python_version >= "3.8" and python_version < "3.11"
-pyzmq==22.3.0 ; python_version >= "3.8" and python_version < "3.11"
-quart-cors==0.5.0 ; python_version >= "3.8" and python_version < "3.11"
-quart==0.17.0 ; python_version >= "3.8" and python_version < "3.11"
-randomname==0.1.5 ; python_version >= "3.8" and python_version < "3.11"
-six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
-sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
-sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
-structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.11"
-structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.11"
-termcolor==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
-toml==0.10.2 ; python_version >= "3.8" and python_version < "3.11"
-typed-argument-parser==1.7.2 ; python_version >= "3.8" and python_version < "3.11"
-typing-extensions==4.3.0 ; python_version >= "3.8" and python_version < "3.11"
-typing-inspect==0.7.1 ; python_version >= "3.8" and python_version < "3.11"
-werkzeug==2.1.2 ; python_version >= "3.8" and python_version < "3.11"
-wsproto==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
-yarl==1.7.2 ; python_version >= "3.8" and python_version < "3.11"
-zipp==3.8.1 ; python_version >= "3.8" and python_version < "3.9"
+aiofiles==23.1.0 ; python_version >= "3.8" and python_version < "3.12"
+aiohttp==3.8.1 ; python_version >= "3.8" and python_version < "3.12"
+aiosignal==1.3.1 ; python_version >= "3.8" and python_version < "3.12"
+aiosqlite==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
+alembic==1.7.7 ; python_version >= "3.8" and python_version < "3.12"
+async-timeout==4.0.2 ; python_version >= "3.8" and python_version < "3.12"
+asyncmy==0.2.7 ; python_version >= "3.8" and python_version < "3.12"
+attrs==23.1.0 ; python_version >= "3.8" and python_version < "3.12"
+blinker==1.6.2 ; python_version >= "3.8" and python_version < "3.12"
+cffi==1.15.1 ; python_version >= "3.8" and python_version < "3.12"
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "3.12"
+click==8.1.6 ; python_version >= "3.8" and python_version < "3.12"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "3.12" and platform_system == "Windows"
+cryptography==40.0.2 ; python_version >= "3.8" and python_version < "3.12"
+et-xmlfile==1.1.0 ; python_version >= "3.8" and python_version < "3.12"
+fire==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
+frozenlist==1.4.0 ; python_version >= "3.8" and python_version < "3.12"
+greenlet==1.1.2 ; python_version >= "3.8" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "3.12"
+h11==0.14.0 ; python_version >= "3.8" and python_version < "3.12"
+h2==4.1.0 ; python_version >= "3.8" and python_version < "3.12"
+h5py==3.8.0 ; python_version >= "3.8" and python_version < "3.12"
+hpack==4.0.0 ; python_version >= "3.8" and python_version < "3.12"
+hypercorn==0.13.2 ; python_version >= "3.8" and python_version < "3.12"
+hyperframe==6.0.1 ; python_version >= "3.8" and python_version < "3.12"
+idna==3.4 ; python_version >= "3.8" and python_version < "3.12"
+importlib-metadata==6.8.0 ; python_version >= "3.8" and python_version < "3.9"
+importlib-resources==6.0.0 ; python_version >= "3.8" and python_version < "3.9"
+itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "3.12"
+jinja2==3.1.2 ; python_version >= "3.8" and python_version < "3.12"
+lark==1.1.2 ; python_version >= "3.8" and python_version < "3.12"
+mako==1.2.4 ; python_version >= "3.8" and python_version < "3.12"
+markupsafe==2.1.3 ; python_version >= "3.8" and python_version < "3.12"
+multidict==6.0.4 ; python_version >= "3.8" and python_version < "3.12"
+mypy-extensions==1.0.0 ; python_version >= "3.8" and python_version < "3.12"
+numpy==1.23.5 ; python_version >= "3.8" and python_version < "3.12"
+openpyxl==3.0.9 ; python_version >= "3.8" and python_version < "3.12"
+packaging==23.1 ; python_version >= "3.8" and python_version < "3.12"
+pillow==9.1.0 ; python_version >= "3.8" and python_version < "3.12"
+pint==0.16.1 ; python_version >= "3.8" and python_version < "3.12"
+priority==2.0.0 ; python_version >= "3.8" and python_version < "3.12"
+py==1.11.0 ; python_version >= "3.8" and python_version < "3.12" and implementation_name == "pypy"
+pycparser==2.21 ; python_version >= "3.8" and python_version < "3.12"
+pydantic==1.10.7 ; python_version >= "3.8" and python_version < "3.12"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.12"
+python-magic==0.4.24 ; python_version >= "3.8" and python_version < "3.12"
+pytz==2021.3 ; python_version >= "3.8" and python_version < "3.12"
+pyzmq==22.3.0 ; python_version >= "3.8" and python_version < "3.12"
+quart-cors==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
+quart==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
+randomname==0.1.5 ; python_version >= "3.8" and python_version < "3.12"
+six==1.16.0 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
+structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.12"
+structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.12"
+termcolor==2.3.0 ; python_version >= "3.8" and python_version < "3.12"
+toml==0.10.2 ; python_version >= "3.8" and python_version < "3.12"
+typed-argument-parser==1.7.2 ; python_version >= "3.8" and python_version < "3.12"
+typing-extensions==4.7.1 ; python_version >= "3.8" and python_version < "3.12"
+typing-inspect==0.9.0 ; python_version >= "3.8" and python_version < "3.12"
+werkzeug==2.1.2 ; python_version >= "3.8" and python_version < "3.12"
+wsproto==1.2.0 ; python_version >= "3.8" and python_version < "3.12"
+yarl==1.9.2 ; python_version >= "3.8" and python_version < "3.12"
+zipp==3.16.2 ; python_version >= "3.8" and python_version < "3.9"
