--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.8, <3.12"
 
 h5py = "3.8.0"
 # for general DB access
-SQLAlchemy = { version = "1.4.31", extras = ["asyncio"] }
+SQLAlchemy = { version = "1.4.49", extras = ["asyncio"] }
 # for caching_sha2_password access in MySQL
 cryptography = '40.0.2'
 # For parsing the arguments for programs (always required basically)
@@ -50,18 +50,21 @@ python-magic = "0.4.24"
 # For the experiment simulator
 randomname = "0.1.5"
 # For http requests
-aiohttp = "3.8.1"
+aiohttp = "3.8.5"
 alembic = "1.7.7"
 # For the production-ready server
 hypercorn = "0.13.2"
 
 # For ZYLA cam image saving
-Pillow = "9.1.0"
+Pillow = "9.4.0"
 
 # For parsing the filter expressions
 lark = "1.1.2"
 structlog = "22.1.0"
 structlog-overtime = "1.0.1"
+
+# This is just to force poetry to use 1.1.3 instead of 1.1.2 which fails on Windows
+greenlet = "1.1.3"
 
 [tool.poetry.dev-dependencies]
 black = '22.3.0'
@@ -82,8 +85,8 @@ types-PyYAML = '5.4.12'
 pytest-asyncio = "0.17.2"
 isort = "5.12.0"
 pytest-subprocess = "1.4.1"
-sqlalchemy2-stubs = "0.0.2-alpha.24"
-fawltydeps = "0.7.1"
+sqlalchemy2-stubs = "0.0.2a35"
+fawltydeps = "0.12.0"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
@@ -117,7 +120,8 @@ ignore_undeclared = ["amarcord", "hypothesis", "pytest", "pytest_asyncio", "pyte
 # aiosqlite/asyncmy/pymysql is used while _running_ AMARCORD
 # cryptography is for a Nix fix
 # python-magic is imported a little weirdly
-ignore_unused = ["aiosqlite", "asyncmy", "cryptography", "fawltydeps", "python-magic"]
+# greenlet is for explicit version forcing
+ignore_unused = ["aiosqlite", "asyncmy", "cryptography", "fawltydeps", "python-magic", "greenlet"]
 
 [tool.pyright]
 include = ["amarcord", "tests"]
