--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 aiofiles==23.1.0 ; python_version >= "3.8" and python_version < "3.12"
-aiohttp==3.8.1 ; python_version >= "3.8" and python_version < "3.12"
+aiohttp==3.8.5 ; python_version >= "3.8" and python_version < "3.12"
 aiosignal==1.3.1 ; python_version >= "3.8" and python_version < "3.12"
 aiosqlite==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
 alembic==1.7.7 ; python_version >= "3.8" and python_version < "3.12"
@@ -18,10 +18,10 @@ coverage==7.2.7 ; python_version >= "3.8" and python_version < "3.12"
 cryptography==40.0.2 ; python_version >= "3.8" and python_version < "3.12"
 dill==0.3.7 ; python_version >= "3.8" and python_version < "3.12"
 et-xmlfile==1.1.0 ; python_version >= "3.8" and python_version < "3.12"
-fawltydeps==0.7.1 ; python_version >= "3.8" and python_version < "3.12"
+fawltydeps==0.12.0 ; python_version >= "3.8" and python_version < "3.12"
 fire==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.8" and python_version < "3.12"
-greenlet==1.1.2 ; python_version >= "3.8" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "3.12"
+greenlet==1.1.3 ; python_version >= "3.8" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.8" and python_version < "3.12"
 h2==4.1.0 ; python_version >= "3.8" and python_version < "3.12"
 h5py==3.8.0 ; python_version >= "3.8" and python_version < "3.12"
@@ -30,7 +30,7 @@ hypercorn==0.13.2 ; python_version >= "3.8" and python_version < "3.12"
 hyperframe==6.0.1 ; python_version >= "3.8" and python_version < "3.12"
 hypothesis==6.27.1 ; python_version >= "3.8" and python_version < "3.12"
 idna==3.4 ; python_version >= "3.8" and python_version < "3.12"
-importlib-metadata==6.8.0 ; python_version >= "3.8" and python_version < "3.12"
+importlib-metadata==6.6.0 ; python_version >= "3.8" and python_version < "3.12"
 importlib-resources==6.0.0 ; python_version >= "3.8" and python_version < "3.9"
 iniconfig==2.0.0 ; python_version >= "3.8" and python_version < "3.12"
 isort==5.12.0 ; python_version >= "3.8" and python_version < "3.12"
@@ -49,7 +49,7 @@ openpyxl-stubs==0.1.25 ; python_version >= "3.8" and python_version < "3.12"
 openpyxl==3.0.9 ; python_version >= "3.8" and python_version < "3.12"
 packaging==23.1 ; python_version >= "3.8" and python_version < "3.12"
 pathspec==0.10.1 ; python_version >= "3.8" and python_version < "3.12"
-pillow==9.1.0 ; python_version >= "3.8" and python_version < "3.12"
+pillow==9.4.0 ; python_version >= "3.8" and python_version < "3.12"
 pint==0.16.1 ; python_version >= "3.8" and python_version < "3.12"
 pip-requirements-parser==32.0.1 ; python_version >= "3.8" and python_version < "3.12"
 platformdirs==3.9.1 ; python_version >= "3.8" and python_version < "3.12"
@@ -74,9 +74,9 @@ quart==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
 randomname==0.1.5 ; python_version >= "3.8" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.12"
 sortedcontainers==2.4.0 ; python_version >= "3.8" and python_version < "3.12"
-sqlalchemy2-stubs==0.0.2a24 ; python_version >= "3.8" and python_version < "3.12"
-sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
-sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy2-stubs==0.0.2a35 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy==1.4.49 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy[asyncio]==1.4.49 ; python_version >= "3.8" and python_version < "3.12"
 structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.12"
 structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.12"
 termcolor==2.3.0 ; python_version >= "3.8" and python_version < "3.12"
