--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==23.1.0 ; python_version >= "3.8" and python_version < "3.12"
-aiohttp==3.8.1 ; python_version >= "3.8" and python_version < "3.12"
+aiohttp==3.8.5 ; python_version >= "3.8" and python_version < "3.12"
 aiosignal==1.3.1 ; python_version >= "3.8" and python_version < "3.12"
 aiosqlite==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
 alembic==1.7.7 ; python_version >= "3.8" and python_version < "3.12"
@@ -15,7 +15,7 @@ cryptography==40.0.2 ; python_version >= "3.8" and python_version < "3.12"
 et-xmlfile==1.1.0 ; python_version >= "3.8" and python_version < "3.12"
 fire==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.8" and python_version < "3.12"
-greenlet==1.1.2 ; python_version >= "3.8" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "3.12"
+greenlet==1.1.3 ; python_version >= "3.8" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.8" and python_version < "3.12"
 h2==4.1.0 ; python_version >= "3.8" and python_version < "3.12"
 h5py==3.8.0 ; python_version >= "3.8" and python_version < "3.12"
@@ -23,7 +23,7 @@ hpack==4.0.0 ; python_version >= "3.8" and python_version < "3.12"
 hypercorn==0.13.2 ; python_version >= "3.8" and python_version < "3.12"
 hyperframe==6.0.1 ; python_version >= "3.8" and python_version < "3.12"
 idna==3.4 ; python_version >= "3.8" and python_version < "3.12"
-importlib-metadata==6.8.0 ; python_version >= "3.8" and python_version < "3.9"
+importlib-metadata==6.6.0 ; python_version >= "3.8" and python_version < "3.9"
 importlib-resources==6.0.0 ; python_version >= "3.8" and python_version < "3.9"
 itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "3.12"
 jinja2==3.1.2 ; python_version >= "3.8" and python_version < "3.12"
@@ -35,7 +35,7 @@ mypy-extensions==1.0.0 ; python_version >= "3.8" and python_version < "3.12"
 numpy==1.23.5 ; python_version >= "3.8" and python_version < "3.12"
 openpyxl==3.0.9 ; python_version >= "3.8" and python_version < "3.12"
 packaging==23.1 ; python_version >= "3.8" and python_version < "3.12"
-pillow==9.1.0 ; python_version >= "3.8" and python_version < "3.12"
+pillow==9.4.0 ; python_version >= "3.8" and python_version < "3.12"
 pint==0.16.1 ; python_version >= "3.8" and python_version < "3.12"
 priority==2.0.0 ; python_version >= "3.8" and python_version < "3.12"
 py==1.11.0 ; python_version >= "3.8" and python_version < "3.12" and implementation_name == "pypy"
@@ -49,8 +49,8 @@ quart-cors==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
 quart==0.17.0 ; python_version >= "3.8" and python_version < "3.12"
 randomname==0.1.5 ; python_version >= "3.8" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.12"
-sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
-sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy==1.4.49 ; python_version >= "3.8" and python_version < "3.12"
+sqlalchemy[asyncio]==1.4.49 ; python_version >= "3.8" and python_version < "3.12"
 structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.12"
 structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.12"
 termcolor==2.3.0 ; python_version >= "3.8" and python_version < "3.12"
