--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,6 +28,7 @@ fawltydeps==0.12.0 ; python_version >= "3.9" and python_version < "3.12"
 fire==0.5.0 ; python_version >= "3.9" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 greenlet==1.1.3 ; python_version >= "3.9" and python_version < "3.12"
+gunicorn==21.2.0 ; python_version >= "3.9" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "3.12"
 httpcore==1.0.2 ; python_version >= "3.9" and python_version < "3.12"
 httpx==0.25.2 ; python_version >= "3.9" and python_version < "3.12"
