--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ fastapi==0.105.0 ; python_version >= "3.9" and python_version < "3.12"
 fire==0.5.0 ; python_version >= "3.9" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 greenlet==1.1.3 ; python_version >= "3.9" and python_version < "3.12"
+gunicorn==21.2.0 ; python_version >= "3.9" and python_version < "3.12"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "3.12"
 idna==3.6 ; python_version >= "3.9" and python_version < "3.12"
 lark==1.1.8 ; python_version >= "3.9" and python_version < "3.12"
@@ -25,6 +26,7 @@ multidict==6.0.4 ; python_version >= "3.9" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.12"
 numpy==1.23.5 ; python_version >= "3.9" and python_version < "3.12"
 openpyxl==3.0.9 ; python_version >= "3.9" and python_version < "3.12"
+packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
 pint==0.23 ; python_version >= "3.9" and python_version < "3.12"
 pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12"
 pydantic==1.10.13 ; python_version >= "3.9" and python_version < "3.12"
