--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -73,6 +73,7 @@ pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pylint==3.2.3 ; python_version >= "3.9" and python_version < "3.12"
 pymysql==1.1.1 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
+pytest-aiohttp==1.0.5 ; python_version >= "3.9" and python_version < "3.12"
 pytest-asyncio==0.23.7 ; python_version >= "3.9" and python_version < "3.12"
 pytest-bdd==7.2.0 ; python_version >= "3.9" and python_version < "3.12"
 pytest-cov==5.0.0 ; python_version >= "3.9" and python_version < "3.12"
