--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,8 +5,9 @@ alabaster==0.7.16 ; python_version >= "3.9" and python_version < "3.12"
 alembic==1.13.1 ; python_version >= "3.9" and python_version < "3.12"
 anyio==3.7.1 ; python_version >= "3.9" and python_version < "3.12"
 astroid==3.2.2 ; python_version >= "3.9" and python_version < "3.12"
-async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
+async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11.0"
 asyncmy==0.2.9 ; python_version >= "3.9" and python_version < "3.12"
+asyncpg==0.30.0 ; python_version >= "3.9" and python_version < "3.12"
 attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.12"
 babel==2.14.0 ; python_version >= "3.9" and python_version < "3.12"
 black==24.4.2 ; python_version >= "3.9" and python_version < "3.12"
