--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "3.12"
 aiosqlite==0.20.0 ; python_version >= "3.9" and python_version < "3.12"
 alembic==1.13.1 ; python_version >= "3.9" and python_version < "3.12"
 anyio==3.7.1 ; python_version >= "3.9" and python_version < "3.12"
-async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
+async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11.0"
 asyncmy==0.2.9 ; python_version >= "3.9" and python_version < "3.12"
+asyncpg==0.30.0 ; python_version >= "3.9" and python_version < "3.12"
 attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.12"
 certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
 cffi==1.16.0 ; python_version >= "3.9" and python_version < "3.12" and platform_python_implementation != "PyPy"
