--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ pylint:
   script:
     - nix develop --command pylint amarcord tests
 
-isort:
+format:
   script:
-    - nix develop --command isort --check amarcord tests
+    - nix develop --command ruff format --check amarcord tests
 
 fawltydeps:
   script:
