--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ dependencies = [
     # needed for MySQL with certain auth methods
     "cryptography==44.0.0",
     "python-magic==0.4.27",
+    # for async file opening functions
+    "anyio==4.8.0",
 ]
 
 [dependency-groups]
@@ -59,7 +61,6 @@ dev = [
     "hypothesis==6.103.1",
     "myst-parser==2.0.0",
     "pyfakefs==5.5.0",
-    "pylint==3.3.2",
     "pytest-aiohttp==1.0.5",
     "pytest-asyncio==0.23.7",
     "pytest-bdd==7.2.0",
@@ -102,6 +103,9 @@ no-binary-package = ["python-magic"]
 profile = "black"
 force_single_line = "true"
 
+[tool.ruff]
+target-version = "py310"
+
 [tool.ruff.lint.isort]
 force-single-line = true
 
@@ -114,18 +118,8 @@ force-single-line = true
 #
 # from X import y
 # from X import z
-select = ["I001"]
-
-[tool.pylint."TYPECHECK"]
-ignored-modules = ["alembic.op","alembic.context"]
-generated-members = ["SUB","SUBSCRIBE","EVENT_DISCONNECTED","EVENT_HANDSHAKE_SUCCEEDED","REQ","RCVTIMEO","EVENT_CONNECTED","PUB"]
-
-[tool.pylint."main"]
-load-plugins=["pylint.extensions.typing","pylint.extensions.redefined_variable_type"]
-extension-pkg-allow-list=["pydantic"]
-
-[tool.pylint."MESSAGES CONTROL"]
-disable=["invalid-name", "missing-module-docstring", "too-many-instance-attributes", "too-many-branches", "missing-class-docstring", "missing-function-docstring", "line-too-long", "missing-final-newline", "logging-not-lazy", "broad-exception-raised", "broad-exception-caught", "too-many-arguments", "bare-except", "too-few-public-methods", "too-many-locals", "too-many-nested-blocks", "too-many-statements", "too-many-public-methods", "too-many-return-statements", "blacklisted-name", "duplicate-code", "logging-fstring-interpolation", "too-many-lines", "too-many-boolean-expressions", "logging-format-interpolation", "raise-missing-from", "deprecated-typing-alias", "subprocess-run-check", "import-outside-toplevel", "too-many-ancestors", "too-many-positional-arguments"]
+select = ["I001", "F", "E", "W", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "FBT", "B", "A", "C4", "T10", "ICN", "LOG", "G", "PIE", "T20", "PYI", "Q", "RET", "SLF", "SLOT", "SIM", "TID", "TC", "INT", "ARG", "PTH", "TD", "FIX", "PD", "PGH", "PL", "R", "W", "FLY", "NPY", "FAST", "AIR", "FURB", "RUF"]
+ignore = ["E501", "E722", "UP035", "ANN401", "S101", "S310", "FBT001", "B017", "B008", "B904", "C405", "C401", "C400", "G004", "G003", "PYI041", "SIM105", "TC001", "PGH003", "PGH004", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911"]
 
 [tool.fawltydeps]
 code = ["amarcord", "tests"]
